--- a/project-manager.html
+++ b/project-manager.html
@@ -40,12 +40,16 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://boards.greenhouse.io/livongo/jobs/4501938002'>Job Application for Senior Strategic Program Manager, Strategic Program Services  at Livongo </a></h5> 
+<h5><a href='https://jobs.lever.co/coursera/457cda76-e950-4d64-aacd-bda9b8fc86e4'>Coursera - Events Program Manager (Contract)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
+<h5><a href='https://boards.greenhouse.io/livongo/jobs/4501938002'>Job Application for Senior Strategic Program Manager, Strategic Program Services  at Livongo </a></h5> 
+<p><span class="badge badge-light">Chicago, IL</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
 <h5><a href='https://hire.withgoogle.com/public/jobs/polsourcecom/view/P_AAAAAAIAACzJAsYbTb2LPm'>Program Manager job in San Francisco, CA at PolSource</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">San Francisco, CA San Francisco, CA, USA</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/criterion-sys/700d8db4-763b-4411-9bfc-330183209208'>Criterion Systems Inc. - Project Manager</a></h5> 
@@ -134,7 +138,7 @@
 <p><span class="badge badge-light">Singapore Malaysia Philippines Hong Kong Taiwan</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://latitudeinc.applytojob.com/apply/eN7qMI5rNx/Content-Manager-Project-Manager'>Content Manager Project Manager - Latitude, Inc. - Career Page</a></h5> 
+<h5><a href='http://latitudeinc.applytojob.com/apply/eN7qMI5rNx/Content-Manager-Project-Manager'>Content Manager Project Manager - Latitude, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">Baltimore, MD</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -150,7 +154,7 @@
 <p><span class="badge badge-light">Charlotte North Carolina</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/TurnerTownsend/743999698585338-senior-project-manager-infrastructure-ireland'>Turner & Townsend Senior Project Manager, Infrastructure, Ireland | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TurnerTownsend/743999698585338-senior-project-manager-infrastructure-ireland'>Turner & Townsend Senior Project Manager, Infrastructure, Ireland | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Dublin</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -180,11 +184,11 @@
 <p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bpcs/jobs/1928884'>Job Application for Customer Success Talent Development Program Manager at Blueprint Technologies</a></h5> 
+<h5><a href='https://boards.greenhouse.io/bpcs/jobs/1928884'>Job Application for Customer Success Talent Development Program Manager at Blueprint Technologies</a></h5> 
 <p><span class="badge badge-light">Irving, TX  Irving, TX</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999698577677-senior-project-manager'>CapTech Consulting Senior Project Manager | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999698577677-senior-project-manager'>CapTech Consulting Senior Project Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Charlotte, NC</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -216,7 +220,7 @@
 <p><span class="badge badge-light">Bellevue, Washington</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qXKaVfww&k=Job&j=oEj39fwT&__jvst=Employee&__jvsd=sq3N0iw3&__jvsc=Twitter&bid=npjupMwS'>SCP Health Careers - Project Manager II</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qXKaVfww&k=Job&j=oEj39fwT&__jvst=Employee&__jvsd=sq3N0iw3&__jvsc=Twitter&bid=npjupMwS'>SCP Health Careers - Project Manager II</a></h5> 
 <p><span class="badge badge-light">Lafayette, Louisiana</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -264,7 +268,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://careers.kyyti.com/jobs/312492-deployment-project-manager'>Deployment Project Manager - Kyyti Group</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.kyyti.com/jobs/312492-deployment-project-manager'>Deployment Project Manager - Kyyti Group</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -284,7 +288,7 @@
 <p><span class="badge badge-light">Budapest</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://dehavilland.applytojob.com/apply/sogMyjCkjq/Program-Project-Manager-Services-Solutions'>Program / Project Manager, Services Solutions - De Havilland Aircraft of Canada Ltd - Career Page</a></h5> 
+<h5><a href='http://dehavilland.applytojob.com/apply/sogMyjCkjq/Program-Project-Manager-Services-Solutions'>Program / Project Manager, Services Solutions - De Havilland Aircraft of Canada Ltd - Career Page</a></h5> 
 <p><span class="badge badge-light">Canada Toronto, ON, Canada     Canada</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -300,7 +304,7 @@
 <p><span class="badge badge-light">Missoula Atlanta, GAGlendale, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://cennox.applytojob.com/apply/JVVaaQkVGl/Electrical-Project-Manager'>Electrical Project Manager - Cennox - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://cennox.applytojob.com/apply/JVVaaQkVGl/Electrical-Project-Manager'>Electrical Project Manager - Cennox - Career Page</a></h5> 
 <p><span class="badge badge-light">Missoula Atlanta, GAGlendale, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -332,7 +336,7 @@
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dept/jobs/1101007'>Job Application for Senior Digital Project Manager at Dept</a></h5> 
+<h5><a href='https://boards.greenhouse.io/dept/jobs/1101007'>Job Application for Senior Digital Project Manager at Dept</a></h5> 
 <p><span class="badge badge-light">Dublin</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -379,7 +383,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/nortekairsolutions-careers-fr/job/oP7sbfwj'>Carri?res Nortek Air Solutions - Senior Project Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/nortekairsolutions-careers-fr/job/oP7sbfwj'>Carri?res Nortek Air Solutions - Senior Project Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -391,11 +395,11 @@
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/umlaut/job/oJlsbfwr'>umlaut North America Careers - Project Manager Operations (PMO)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/umlaut/job/oJlsbfwr'>umlaut North America Careers - Project Manager Operations (PMO)</a></h5> 
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/umlaut/job/oWlsbfwE'>umlaut North America Careers - Quality Project Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/umlaut/job/oWlsbfwE'>umlaut North America Careers - Quality Project Manager</a></h5> 
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -439,17 +443,13 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/lucidmotors/84bbea87-6026-4b1a-b10d-7e91621f2b52'>Lucid Motors - Technical Program Manager</a></h5> 
+<h5><a href='https://jobs.lever.co/lucidmotors/84bbea87-6026-4b1a-b10d-7e91621f2b52'>Lucid Motors - Technical Program Manager</a></h5> 
 <p><span class="badge badge-light">Newark, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qNc9VfwN&k=Job&j=o5Qrbfwh&__jvst=Employee+Referral&__jvsd=sQfHFgwc&__jvsc=Twitter&bid=nzWipMwt'>Workiva Inc. Careers - Onboarding Project Manager</a></h5> 
 <p><span class="badge badge-light">Denver, Colorado  New York, New York  Scottsdale, Arizona</span></p>
 <p>Posted on:: 2019-10-30</p>
-<hr/>
-<h5><a href='https://kimmel-associates.breezy.hr/p/46d91d393b0d-project-manager'>Project Manager</a></h5> 
-<p><span class="badge badge-light">Salt Lake City, UT</span></p>
-<p>Posted on: 2019-10-30</p>
 <hr/>
 
 
