--- a/product-manager.html
+++ b/product-manager.html
@@ -40,8 +40,24 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://www.sonetjob.com/job/offer?id=43abe6eb2067e3ad&tc=jo-tw'>SonetJob | Offre d'emploi - Recherche et D?veloppement - Product Manager</a></h5> 
+<h5><a href='https://jobs.lever.co/americaatwork/2bb511c7-d0f7-4ad4-99a8-ee4f443c83d4'>America At Work - Product Manager (copy)</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/americaatwork/f8c2ae3a-693a-4fd1-a0b6-b4c141e3f408'>America At Work - Product Manager (copy)</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='http://medbridge.applytojob.com/apply/am6o2wHuzq/Product-Manager-Mobile-Lehi-UT'>Product Manager - Mobile  (Lehi, UT) - MedBridge - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='http://medbridge.applytojob.com/apply/xkxzQYHiBd/Product-Manager-Mobile-Seattle-WA'>Product Manager - Mobile (Seattle, WA) - MedBridge - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='https://www.sonetjob.com/job/offer?id=43abe6eb2067e3ad&tc=jo-tw'>SonetJob | Offre d'emploi - Recherche et D?veloppement - Product Manager</a></h5> 
+<p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/payu/jobs/4478625002'>Job Application for product manager at PayU</a></h5> 
@@ -88,7 +104,7 @@
 <p><span class="badge badge-light">Montreal, Canada  Montreal</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Proprioo/743999698595366-product-manager-h-f-'>Proprioo Product Manager (H/F) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Proprioo/743999698595366-product-manager-h-f-'>Proprioo Product Manager (H/F) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">?le-de-France, France</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -156,7 +172,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Visa/743999698577414-product-manager-dps-risk-products'>Visa Product Manager, DPS Risk Products | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Visa/743999698577414-product-manager-dps-risk-products'>Visa Product Manager, DPS Risk Products | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -202,7 +218,7 @@
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/digitaltradecareers/job/o8tpbfwV'>Department for International Trade  - Digital, Data and Technology Careers - Product Manager / Associate Product Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/digitaltradecareers/job/o8tpbfwV'>Department for International Trade  - Digital, Data and Technology Careers - Product Manager / Associate Product Manager</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom  London</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -236,7 +252,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://infutor.applytojob.com/apply/mkwvPctkJG/Senior-Product-Manager-Consumer-Identities'>Senior Product Manager, Consumer Identities - Infutor Data Solutions - Career Page</a></h5> 
+<h5><a href='http://infutor.applytojob.com/apply/mkwvPctkJG/Senior-Product-Manager-Consumer-Identities'>Senior Product Manager, Consumer Identities - Infutor Data Solutions - Career Page</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -436,23 +452,7 @@
 <p><span class="badge badge-light">Mexico Mexico</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://faveo.join.com/jobs/463891-junior-product-manager-m-w-d'>Job @ faveo (Essen): Junior Product Manager (m/w/d) | JOIN</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='http://stackpath.applytojob.com/apply/OmzSVoLkum/Edge-Services-Product-Manager'>Edge Services - Product Manager - StackPath - Career Page</a></h5> 
-<p><span class="badge badge-light">Dallas, TX</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='http://stackpath.applytojob.com/apply/hliJrHTPcZ/Edge-Computing-Product-Manager'>Edge Computing - Product Manager - StackPath - Career Page</a></h5> 
-<p><span class="badge badge-light">Dallas, TX</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/justicedigitalandtechnology/job/oMbsbfwk'>Justice Digital and Technology Careers - Product Manager, London</a></h5> 
-<p><span class="badge badge-light">London  London  London London  London  London</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
